--- a/src/Daftarin/beranda.html
+++ b/src/Daftarin/beranda.html
@@ -139,7 +139,7 @@
 					<div class="col-md-12">
             <div class="card">
               <div class="card-body">
-             Selamat datang, pilih cara pendaftaran anda..
+             Selamat datang, pilih cara pendaftaran anda....
               </div>
             </div>
 					</div>
