device name printer

--- a/src/Daftarin/beranda.html
+++ b/src/Daftarin/beranda.html
@@ -208,7 +208,8 @@
 		collate: false,
 		copies: 1,
 		header: 'Header of the Page',
-		footer: 'Footer of the Page'
+		footer: 'Footer of the Page',
+		// deviceName:''
 	}
 
 	current.addEventListener('click', (event) => {
